<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">TelenetHotspot AutoLogin</string>
    <string name="savebutton_str">Save</string>
    <string name="loginbutton_on_text">Logged in</string>
    <string name="loginbutton_off_text">Logged off</string>
    <string name="menu_about">About</string>
    <string name="helptext">This app is useful for Telenet customers who also have a Telenet Hotspot subscription.\n 
    Just save your username and password and the app will automatically log you in when you are connected to a Telenet Hotspot.\n 
    No need to keep the application running, we just listen for changes in the WIFI-connection.\n 
    When you are connected to a Telenet Hotspot, this app will also show you a login/logout button to manually log in/out.\n
    You can also sort your favourite WIFI-stations. In case there\'s more than 1 available, the highest in the list will be chosen.\n
    This is especially important if you also run a Homespot at home but rather want to be logged into your private WIFI-network.\n
    </string>
    <string name="aboutfooter">
    
    Written and published by jo.giraerts@gmail.com
    
    </string>
    <string name="tab_main">Main</string>
    <string name="tab_hotspotlist">List</string>
    <string name="tab_preferences">Settings</string>
    <string name="tab_about">About</string>
    <string name="menu_preferences">Settings</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="telenet_hotspot_autologin_about">TelenetHotspot AutoLogin - About</string>
    <string name="connected">--- Connected ---</string>
    <string name="disconnected">--- DISCONNECTED! ---</string>
    <string name="prefs_save_error">There was a problem while saving your credentials. Please try again</string>
    <string name="login_saved">Login and password saved!"</string>
    <string name="login_success">Logged in successfully</string>
    <string name="login_failed">Login failed</string>
    <string name="login_failed_nopw">Login failed: Empty username/password</string>
    <string name="save_succesful">List succesfully saved</string>
    <string name="prefs_show_notifications_summary">Do you want to be notified when logged in?</string>
    <string name="prefs_show_notifications_title">Show Notifications</string>
    <string name="prefs_login_hotspot_summary">Do you want to log into Telenet Hotspots?</string>
    <string name="enable">Enable</string>
    <string name="prefs_userid_summary">If your Hotspot-login is different from Homespot-login</string>
    <string name="prefs_userid_title">Hotspot Username</string>
    <string name="prefs_userpw_summary">If your Hotspot-login is different from Homespot-login</string>
    <string name="prefs_userpw_title">Hotspot Password</string>
    <string name="telenet_hotspot">Telenet Hotspot</string>
    <string name="telenet_homespot">Telenet Homespot</string>
    <string name="prefs_login_homespot_summary">Do you want to log into Telenet Homespots?</string>
    <string name="prefs_userid_homespot_summary">If your Homespot-login is different from Hotspot-login</string>
    <string name="prefs_userid_homespot_title">Homespot Username</string>
    <string name="prefs_userpw_homespot_summary">If your Homespot-login is different from Hotspot-login</string>
    <string name="prefs_userpw_homespot_title">Homespot Password</string>
    <string name="changelog"><![CDATA[
    <b>3.1:</b><br> 
. Fix for an infrequent crash in wifilist<br>
<br>
<b>3.0:</b><br>
. Visual overhaul: Modern look<br>
. Draggable list of hotspots to reorder their priorities<br>
. Extra language: Dutch <br>
. You can now choose if you want either hotspot or homespot or both enabled<br>]]>
</string>
</resources>
