<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="show_notifications"
        android:persistent="true"
        android:summary="@string/prefs_show_notifications_summary"
        android:title="@string/prefs_show_notifications_title" />

    <PreferenceCategory android:title="@string/telenet_hotspot" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="login_hotspot"
            android:persistent="true"
            android:summary="@string/prefs_login_hotspot_summary"
            android:title="@string/enable" />
        <EditTextPreference
            android:dependency="login_hotspot"
            android:layout="?android:attr/preferenceLayoutChild"
            android:key="userid"
            android:persistent="true"
            android:summary="@string/prefs_userid_summary"
            android:title="@string/prefs_userid_title" />
        <EditTextPreference
            android:dependency="login_hotspot"
            android:layout="?android:attr/preferenceLayoutChild"
            android:key="userpw"
            android:password="true"
            android:persistent="true"
            android:summary="@string/prefs_userpw_summary"
            android:title="@string/prefs_userpw_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/telenet_homespot" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="login_homespot"
            android:persistent="true"
            android:summary="@string/prefs_login_homespot_summary"
            android:title="@string/enable" />

        <EditTextPreference
            android:key="userid_homespot"
            android:dependency="login_homespot"
            android:layout="?android:attr/preferenceLayoutChild"
            android:persistent="true"
            android:summary="@string/prefs_userid_homespot_summary"
            android:title="@string/prefs_userid_homespot_title" />
        <EditTextPreference
            android:key="userpw_homespot"
            android:dependency="login_homespot"
            android:layout="?android:attr/preferenceLayoutChild"
            android:password="true"
            android:persistent="true"
            android:summary="@string/prefs_userpw_homespot_summary"
            android:title="@string/prefs_userpw_homespot_title" />
    </PreferenceCategory>

</PreferenceScreen>