<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   >   

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:padding="5dp" >

	<EditText
	    android:id="@+id/userid"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/username_label"
	    android:singleLine="true" />   
	
	<EditText
		android:id="@+id/password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:password="true"
		android:hint="@string/password_label"
	/>   
	
	<Button
		android:id="@+id/savebutton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/savebutton_str"
		android:onClick="onClick"
	/>
</LinearLayout>

<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="160dp"
    android:background="@drawable/border" 
    android:layout_marginTop="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    >

	<TableRow
	    android:layout_span="2"
	    android:gravity="center_horizontal"
	>
		<TextView 
		   android:id="@+id/Connected"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content" 
		   android:layout_gravity="center_horizontal" 
		   android:gravity="center_horizontal"
		   />
	</TableRow>
	
	<TableRow>
		<TextView 
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:text="Wifi IP"
		   android:textStyle="bold"
		   />
		<TextView 
		   android:id="@+id/Ip"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   />
	</TableRow>
	
	<TableRow>
		<TextView 
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:text="MAC"
		   android:textStyle="bold"
		   />
		<TextView 
		   android:id="@+id/Mac"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   />
	</TableRow>
	
	<TableRow>
		<TextView 
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:text="SSID"
		   android:textStyle="bold"
		   />
		<TextView 
		   android:id="@+id/Ssid"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   />
	</TableRow>
	
	<TableRow>
		<TextView 
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:text="BSSID"
		   android:textStyle="bold"
		   />
		<TextView 
		   android:id="@+id/Bssid"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   />
	</TableRow>
	
	<TableRow>
		<TextView 
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:text="Speed"
		   android:textStyle="bold"
		   />
		<TextView 
		   android:id="@+id/Speed"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   />
	</TableRow>
	
	<TableRow>
		<TextView 
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:text="Rssi"
		   android:textStyle="bold"
		   />
		<TextView 
		   android:id="@+id/Rssi"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   />
	</TableRow>
</TableLayout>

<ToggleButton 
    android:id="@+id/loginbutton" 
    android:layout_width="fill_parent" 
    android:layout_height="66dp" 
    android:layout_marginTop="10dp"
    android:layout_marginLeft="15dp" 
    android:layout_marginRight="15dp"
    android:layout_gravity="bottom|center_horizontal" 
    android:onClick="onClick" 
    android:paddingBottom="22dp"
    android:textColor="#aaaaaa" 
    android:textOff="@string/loginbutton_off_text" 
    android:textOn="@string/loginbutton_on_text" 
/>
   
</LinearLayout>